# holmes

./: guide.ipynb  readme.md  readme.txt  setup.cfg
src/holmes/: datasets.py
src/holmes/ds/: california_housing.py
src/ml_holmes.egg-info/: PKG-INFO  SOURCES.txt
