[metadata]
name = ml-holmes
version = 0.0.1
author = Oleg Sedukhin
author_email = sedol.mong@mail.ru
description = A machine learning benchmark on tabular data
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/sedol1339/holmes
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src